# kmer-sim

./: README.md  pyproject.toml
src/kmer_sim/: __init__.py  jaccard_metric.py  kmer_comparer.py
tests/: conftest.py  test_similarity_comparer.py
